Finished Stretch assignment

--- a/stretch-assignment/index.html
+++ b/stretch-assignment/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>DOM II</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./index.js">
   </head>
   <body>
     <script defer="defer" src="./index.js"></script>
